# iris-svn

./: ChangeLog  NEWS  iris.vcproj
devcpp/: Ultima_Iris_private.h  Ultima_Iris_private.rc
developertools/: README.TXT  UltimaWrapper.def
gfm/: background.gfm  charlist.gfm  healthbar.gfm  main_menu.gfm  neterror.gfm  player_paperdoll.gfm  serverlist.gfm  status.gfm
include/: Buffer.h  Cache.h  Config.h  Exception.h  Game.h  Geometry.h  include.h  iris_endian.h  irisgl.h  string_utils.h
iris/: ChangeLog  Known Bugs.txt  README  iris 7.1.sln  iris 7.1.vcproj  iris 8.vcproj  iris.rc  (+4 more)
iris/src/: Buffer.cpp  Config.cpp  Debug.cpp  Font.cpp  FontManager.cpp  Game.cpp  Geometry.cpp  Logger.cpp  Macros.cpp  Makefile.am  Makefile.in  SDLEvent.cpp  SynchronizedTime.cpp  iris_endian.cpp  main.cpp  pathsearch.cpp  robstring1.2.cpp  string_utils.cpp  ui3.cpp  xml.cpp
iris/src/cal3d/: animation_action.cpp  cal3d_wrapper.cpp  coreanimation.cpp  coremesh.cpp  coremodel.cpp  coresubmesh.cpp  coresubmorphtarget.cpp  error.cpp  matrix.cpp  physique.cpp  quaternion.cpp  tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  vector.cpp
iris/src/csl/: Block.cpp  CSLForm.cpp  CSLHandler.cpp  Compile.cpp  Function.cpp  Input.cpp  Instruct.cpp  Interprt.cpp  Library.cpp  Parametr.cpp  Utility.cpp  Variable.cpp  ZAsync.cpp  ZCsl.cpp  ZDate.cpp  ZDynLink.cpp  ZExcept.cpp  ZFile.cpp  ZPlatfrm.cpp  ZProcess.cpp  ZProfile.cpp  ZPtrlist.cpp  ZRegular.cpp  ZResrce.cpp  ZSql.cpp  ZString.cpp  ZTrace.cpp
iris/src/granny/: GrannyLoader.cpp  GrannyModelAOS.cpp  GrannyModelTD.cpp  GrannyStream.cpp  GrannyTextures.cpp  grannyfile.cpp  grnanim.cpp  grnbones.cpp  grnboneties.cpp  grnitemlist.cpp  grnmatrix.cpp  grnmeshes.cpp  grnobjects.cpp  grntextchunk.cpp  grntextureinfos.cpp  grntextures.cpp  grnunhandled.cpp
iris/src/gui/: Border.cpp  Button.cpp  Checkbox.cpp  Container.cpp  Control.cpp  GUIHandler.cpp  Gump.cpp  GumpDialog.cpp  HTMLGumpParser.cpp  Image.cpp  ImageArt.cpp  InputField.cpp  ItemContainer.cpp  Label.cpp  MultiLabel.cpp  Paperdoll.cpp  RadioButton.cpp  Stack.cpp  TextManager.cpp  Textbox.cpp
iris/src/loaders/: ArtLoader.cpp  ClilocLoader.cpp  FontLoader.cpp  GroundTextures.cpp  GumpLoader.cpp  HueLoader.cpp  MapInfo.cpp  ModelInfoLoader.cpp  MultisLoader.cpp  PaperdollBuilder.cpp  SkillLoader.cpp  SoundLoader.cpp  SpeechLoader.cpp  StaticModelLoader.cpp  StaticModelRaster.cpp  StaticModels.cpp  StaticTextureLoader.cpp  StitchinLoader.cpp  StreamLoader.cpp  TileDataBuffer.cpp  TileDataLoader.cpp  UOMap.cpp  VerdataLoader.cpp
iris/src/memguard/: memguard.cpp
iris/src/net/: Client.cpp  Packet.cpp  btree.cpp  unicode.cpp  uo_huffman.cpp
iris/src/renderer/: Bitmask.cpp  Camera.cpp  Characters.cpp  DynamicObjects.cpp  Fade.cpp  MapBlock.cpp  MapBuffer.cpp  Renderer.cpp  SDLScreen.cpp  StaticObjects.cpp  Texture.cpp  TextureBuffer.cpp
iris/src/renderer/3D/: CharacterLight.cpp  Light3D.cpp  LightNodeEnvironment.cpp  LightNodes.cpp  MapBlock3D.cpp  MapBuffer3D.cpp  MotiveBasedGroundLight.cpp  MotiveBasedLight.cpp  Renderer3D.cpp  SceneMaker.cpp  ShaderMatrixBlock.cpp  WorldEnvironment.cpp
iris/src/renderer/particles/: ParticleEngine.cpp  ParticleHandler.cpp  ParticleLoader.cpp  ParticleTextures.cpp
iris/src/sound/: Music.cpp  MusicListLoader.cpp  SoundMixer.cpp
(+1331 files in other folders)
