VPATH = loaders renderer gui csl net granny sound renderer/3D renderer/2D renderer/particles
AM_CXXFLAGS=@CXXFLAGS@ -I../include -I../include/csl -Wall

bin_PROGRAMS=ui3
ui3_LDADD=@GL_LIBS@
ui3_SOURCES= ArtLoader.cpp \
Bitmask.cpp \
Border.cpp \
btree.cpp \
Buffer.cpp \
Macros.cpp \
Button.cpp \
Camera.cpp \
Characters.cpp \
Checkbox.cpp \
Client.cpp\
ClilocLoader.cpp \
SpeechLoader.cpp \
Config.cpp \
Container.cpp \
Control.cpp \
CSLHandler.cpp \
Logger.cpp \
DynamicObjects.cpp \
Exception.cpp \
Fade.cpp\
FontLoader.cpp \
Game.cpp \
Geometry.cpp \
grannyfile.cpp \
GrannyLoader.cpp \
GrannyModelAOS.cpp \
GrannyModelTD.cpp \
GrannyStream.cpp \
GrannyTextures.cpp \
grnanim.cpp \
grnbones.cpp \
grnboneties.cpp \
grnitemlist.cpp \
grnmatrix.cpp \
grnmeshes.cpp \
grnobjects.cpp \
grntextchunk.cpp \
grntextureinfos.cpp \
grntextures.cpp \
grnunhandled.cpp \
GroundTextures.cpp \
GUIHandler.cpp \
Gump.cpp \
GumpDialog.cpp \
GumpLoader.cpp \
HueLoader.cpp \
HTMLGumpParser.cpp \
Image.cpp \
ImageArt.cpp \
InputField.cpp \
ItemContainer.cpp\
Label.cpp \
Light3D.cpp \
MapBlock.cpp \
MapBlock3D.cpp \
MapBuffer.cpp \
MapBuffer3D.cpp \
MapInfo.cpp \
ModelInfoLoader.cpp \
MotiveBasedLight.cpp \
MotiveBasedGroundLight.cpp \
MultiLabel.cpp \
MultisLoader.cpp \
Music.cpp \
MusicListLoader.cpp \
ShaderMatrixBlock.cpp \
Packet.cpp \
Paperdoll.cpp \
PaperdollBuilder.cpp \
ParticleEngine.cpp \
ParticleHandler.cpp \
ParticleLoader.cpp \
ParticleTextures.cpp \
RadioButton.cpp \
Renderer.cpp \
Renderer3D.cpp \
SceneMaker.cpp \
SDLEvent.cpp \
SDLScreen.cpp \
SkillLoader.cpp \
SoundLoader.cpp \
SoundMixer.cpp \
Stack.cpp \
StaticModelLoader.cpp \
StaticModels.cpp \
StaticModelRaster.cpp \
StaticTextureLoader.cpp \
StitchinLoader.cpp \
StreamLoader.cpp \
string_utils.cpp \
Textbox.cpp\
TextManager.cpp \
Texture.cpp \
TextureBuffer.cpp \
TileDataBuffer.cpp \
TileDataLoader.cpp \
main.cpp \
unicode.cpp \
UOMap.cpp \
uo_huffman.cpp \
VerdataLoader.cpp \
xml.cpp \
Block.cpp \
Compile.cpp \
Function.cpp \
Input.cpp \
Instruct.cpp \
Interprt.cpp \
Library.cpp \
Parametr.cpp \
Utility.cpp \
Variable.cpp \
ZAsync.cpp \
ZCsl.cpp \
ZDate.cpp \
ZDynLink.cpp \
ZExcept.cpp \
ZFile.cpp \
ZPlatfrm.cpp \
ZProcess.cpp \
ZProfile.cpp \
ZPtrlist.cpp \
ZRegular.cpp \
ZResrce.cpp \
ZSql.cpp \
ZString.cpp \
ZTrace.cpp \
StaticObjects.cpp \
CharacterLight.cpp \
LightNodes.cpp \
LightNodeEnvironment.cpp \
iris_endian.cpp \
animation_action.cpp \
animation_cycle.cpp \
bone.cpp \
buffersource.cpp \
coreanimation.cpp \
corebone.cpp \
corekeyframe.cpp \
corematerial.cpp \
coremesh.cpp \
coremodel.cpp \
coremorphanimation.cpp \
coreskeleton.cpp \
coresubmesh.cpp \
coresubmorphtarget.cpp \
coretrack.cpp \
error.cpp \
global.cpp \
loader.cpp \
matrix.cpp \
mesh.cpp \
mixer.cpp \
model.cpp \
morphtargetmixer.cpp \
physique.cpp \
platform.cpp \
quaternion.cpp \
skeleton.cpp \
springsystem.cpp \
streamsource.cpp \
submesh.cpp \
tinystr.cpp \
tinyxml.cpp \
tinyxmlerror.cpp \
tinyxmlparser.cpp \
vector.cpp \
CSLForm.cpp


